force-app/main/default/objects/Stock_Order__c/Stock_Order__c.object-meta.xml
<CustomObject>
    <label>Stock Order</label>
    <nameField>
        <label>Stock Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stock Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>