force-app/main/default/objects/Stock_Order__c/fields/Buy_Price__c.field-meta.xml
<CustomField>
    <fullName>Buy_Price__c</fullName>
    <label>Buy Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>