force-app/main/default/objects/Stock_Order__c/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipLabel>Stock Orders</relationshipLabel>
    <relationshipName>Stock_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>